--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="public/style.css">
-    <script src="public/script.js"></script>
+    <script src="public/script.js" defer></script>
 </head>
 <body>
-    <h1>Hello world</h1>
-    <img src="public/images/cat301.jpg" alt="cat">
+    <div id="root">
+        <h1>Hello world</h1>
+        <img src="public/images/cat301.jpg" alt="cat">
+    </div>
 </body>
 </html>
